# nginx-logs-parser

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  generate_data.py  pyproject.toml  pytest.ini
src/app/: admin.py  api.py  enums.py  models.py  schemas.py  settings.py  urls.py
src/app/logic/: loader.py
src/app/management/commands/: import_logs.py
src/app/migrations/: 0001_initial.py
src/tests/: factories.py  test_api.py  test_commands.py
